--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
             <div class="result-card">
                 <h3>🔒 Private or Public:</h3>
                 <p id="ip-type"></p>
-                <button class="copy-btn" data-target="ip-class">📋 Copy</button>
+                <button class="copy-btn" data-target="ip-type">📋 Copy</button>
             </div>
             <div class="result-card">
                 <h3>📊 IP Range:</h3>
                 <p id="ip-range"></p>
-                <button class="copy-btn" data-target="ip-class">📋 Copy</button>
+                <button class="copy-btn" data-target="ip-range">📋 Copy</button>
             </div>
             <div class="result-card">
                 <h3>🧠 Binary Representation:</h3>
                 <p id="ip-binary"></p>
-                <button class="copy-btn" data-target="ip-class">📋 Copy</button>
+                <button class="copy-btn" data-target="ip-binary">📋 Copy</button>
             </div>
         </section>
     </main>
