Add subnet mask, network address, and broadcast address calculations; update results display

--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
                 <p id="ip-binary"></p>
                 <button class="copy-btn" data-target="ip-binary">📋 Copy</button>
             </div>
+            <div class="result-card">
+                <h3>📡 Subnet Mask:</h3>
+                <p id="ip-subnet"></p>
+                <button class="copy-btn" data-target="ip-subnet">📋 Copy</button>
+            </div>
+            <div class="result-card">
+                <h3>🌐 Network Address:</h3>
+                <p id="ip-network"></p>
+                <button class="copy-btn" data-target="ip-network">📋 Copy</button>
+            </div>
+            <div class="result-card">
+                <h3>📢 Broadcast Address:</h3>
+                <p id="ip-broadcast"></p>
+                <button class="copy-btn" data-target="ip-broadcast">📋 Copy</button>
+            </div>
         </section>
     </main>
 
