Add functionality to calculate and display usable IPs in subnet; update results section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                 <p id="ip-broadcast"></p>
                 <button class="copy-btn" data-target="ip-broadcast">📋 Copy</button>
             </div>
+            <div class="result-card">
+                <h3>🧮 Usable IPs in Subnet:</h3>
+                <p id="ip-hosts"></p>
+                <button class="copy-btn" data-target="ip-hosts">📋 Copy</button>
+            </div>
+
         </section>
     </main>
 
