Add functionality to display usable host IP range; update results section and copy button

--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
                 <p id="ip-hosts"></p>
                 <button class="copy-btn" data-target="ip-hosts">📋 Copy</button>
             </div>
-
+            <div class="result-card">
+                <h3>🔁 Usable Host IP Range:</h3>
+                <p id="ip-usable-range"></p>
+                <button class="copy-btn" data-target="ip-usable-range">📋 Copy</button>
+            </div>
         </section>
     </main>
 
